// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicMessage renders component 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders component when message is sent by owner 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
                 (You)
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders component with status failed 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock clickable-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock failed-mock"
            />
          </ForwardRef(WithStyles)>
          <Elipsis
            classes={
              Object {
                "content": "failed-mock",
              }
            }
            content="Error -2: This is some kind of error message"
            interactive={true}
            length={60}
            tooltipPlacement="bottom"
          />
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders correct time for different month 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              Feb 07, 13:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders correct time for different year 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              Mar 07, 2018, 13:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders correct time for same week 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              Wed, 13:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders username 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              11:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock broadcasted-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders with status cancelled 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock clickable-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders with status pending 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <pending
              className="statusIcon-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;

exports[`BasicMessage renders with status success 1`] = `
<WithStyles(ForwardRef(ListItem))
  className="wrapper-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(ListItemText))
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <ForwardRef(WithStyles)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <ForwardRef(WithStyles)
          item={true}
        >
          <withRouter(Connect(Component))
            address=""
            anchorEl={null}
            handleClose={[Function]}
            isUnregistered={false}
            username="Unnamed"
          />
          <ForwardRef(WithStyles)
            alignItems="center"
            className="pointer-mock"
            container={true}
            onClick={[Function]}
          >
            <ForwardRef(WithStyles)
              className="avatar-mock"
              item={true}
              xs="auto"
            >
              <span
                className="alignAvatar-mock"
              >
                <Jdenticon
                  size="55"
                  value="Unnamed"
                />
              </span>
            </ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              item={true}
              xs="auto"
            >
              <ForwardRef(WithStyles)
                className="username-mock"
                color="textPrimary"
              >
                Unnamed
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                variant="caption"
              >
                zbay.io/uri/
                ...
              </ForwardRef(WithStyles)>
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          <ForwardRef(WithStyles)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <ForwardRef(WithStyles)
              variant="caption"
            >
              12:03
            </ForwardRef(WithStyles)>
            <Memo
              className="statusIcon-mock"
            />
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;
